--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.465.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -11,15 +12,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1510.0",
+    "axios": "^1.6.2",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "mongodb": "^6.3.0",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
+    "react-s3": "^1.3.1",
     "react-scripts": "^5.0.1",
     "reflect-metadata": "^0.1.13",
     "web-vitals": "^2.1.4"
@@ -31,7 +37,8 @@
     "eject": "react-scripts eject",
     "dev:server": "npm run build:server && concurrently \"tsc -p server/tsconfig.json -w\" \"nodemon -r source-map-support/register dist-server/api/index.js\"",
     "build:server": "tsc -p server/tsconfig.json",
-    "start:server": "npm run build:server && node -r source-map-support/register dist-server/api/index.js"
+    "start:server": "npm run build:server && node -r source-map-support/register dist-server/api/index.js",
+    "dev": "concurrently \"npm run dev:server\" \"npm start\""
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +61,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.4.4",
     "@types/express-session": "^1.17.10",
     "@types/morgan": "^1.9.9",
     "concurrently": "^8.2.2",
