--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.3.1",
     "react-router-dom": "^6.20.1",
     "react-s3": "^1.3.1",
     "react-scripts": "^5.0.1",
